# lingua

./: .gitignore  README.md  justfile  pyproject.toml
src/agents/: _prompts.py  _tools.py  agent.py
src/agents/memory/: user_store.py  vector_store.py
src/ai/: deploy.py  pyproject.toml  requirements.txt
src/ai/lingua/: _prompts.py  _tools.py  agent.py
src/ui/: app.py  index.html
src/web/: .env.example  README.md  apphosting.yaml  firebase.json  firestore.rules  package-lock.json  package.json
src/web/src/: app.css  app.html  service-worker.js
src/web/src/lib/: agentEngine.js  firebase.js  speech.js  ui.svelte.js
src/web/src/routes/: +layout.svelte  +page.svelte
src/web/src/routes/chat/: +page.server.js  +page.svelte
src/web/src/routes/chat/session/: +server.js
src/web/src/routes/chat/sessions/: +server.js
src/web/src/routes/quiz/: +page.svelte
src/web/src/routes/tts/: +server.js
src/web/static/: manifest.json
